--- a/src/components/global.css
+++ b/src/components/global.css
@@ -1,6 +1,6 @@
 :root {
-  background-color: #FFEEDD;
-  font-family: Verdana, Geneva, Tahoma, sans-serif !important;
+  background-color: #FFF;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 a {
