--- a/src/components/global.css
+++ b/src/components/global.css
@@ -1,6 +1,6 @@
 :root {
   background-color: #fff;
-  font-family: Arial, Helvetica, sans-serif !important;
+  font-family: Arial,sans-serif !important;
   height: 100%;
   width: 100%;
   margin: 0;
